--- a/snap-uber.html
+++ b/snap-uber.html
@@ -6,21 +6,24 @@
 	</head>
 	<body>
 		<h1>Uber Persona</h1>
+			<img src="rsz_snappic.jpg" alt="Sean">
 			<p><b>Name:</b> Sean</p>
 			<p><b>Age:</b> 28</p>
 			<p><b>Gender:</b> Male</p>
 			<p><b>Occupation:</b> T-Mobile Store Manager</p>
-			<br>
 			<p><b>Technology:</b> iPhone X; highly skilled at using mobile apps and accessories.</p>
-			<br>
 			<p><b>Attitude:</b>Outgoing, tech savvy, likes to give reviews</p>
-			<br>
 			<p><b>Needs/Goals/Features:</b>
 				<ul>
 					<li>Photo of driver</li>
 					<li>Rating System</li>
-					<li></li>
+					<li>Payment options</li>
 				</ul>
-			<p>
+			<p><b>Frustrations:</b>
+				<ul>
+				<li>Better UI/UX</li>
+				<li>Wants to connect with other Uber riders</li>
+				</ul>
+			</p>
 	</body>
 </html>
